@@ -8,7 +8,7 @@
 		"minor":3,
 		"patch":0
 	},
-	"starsectorVersion":"0.96a-RC9",
+	"starsectorVersion":"0.96a-RC10",
 	"directDownloadURL":"https://github.com/Tranquiliti/DMODServices/releases/download/v0.3.0/DMODServices-v0.3.0.zip",
 	"changelogURL":"https://raw.githubusercontent.com/Tranquiliti/DMODServices/main/changelog.txt"
 }
