@@ -5,7 +5,7 @@
   "author":"Tranquility",
   "version":{"major":0,"minor":3,"patch":0},
   "description":"Adds D-MOD services, which lets your ships gain Damage Mods in a controlled environment.",
-  "gameVersion":"0.96a-RC9",
+  "gameVersion":"0.96a-RC10",
   "jars":["jars/DModServices.jar"],
   "modPlugin":"DModServicesModPlugin"
 }
